# test-project-dexe

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
tests/: test_foo.py
